         0b01001100[2..5]  #=> 0b0011
         0b01001100[2...6] #=> 0b0011
             ^^^^

Module::

  New method::

    * Added Module#const_source_location to retrieve the location where a
      constant is defined.  [Feature #10771]

  Modified method::

    * Module#autoload? now takes an +inherit+ optional argument, like as
      Module#const_defined?.  [Feature #15777]

ObjectSpace::WeakMap::

  Modified method::

    * ObjectSpace::WeakMap#[]= now accepts special objects as either key or
      values.  [Feature #16035]

Regexp / String::

    * Update Unicode version and Emoji version from 11.0.0 to
      12.0.0.  [Feature #15321]

    * Update Unicode version to 12.1.0, adding support for
      U+32FF SQUARE ERA NAME REIWA.  [Feature #15195]

RubyVM::

  Removed method::

    * RubyVM.resolve_feature_path moved to
      $LOAD_PATH.resolve_feature_path.  [Feature #15903] [Feature #15230]

Symbol::

  Modified method::

    * Symbol#to_s now always returns a frozen String. The returned String is
      always the same for a given Symbol. This change is experimental.
      [Feature #16150]

Time::

  New methods::

    * Added Time#ceil method.  [Feature #15772]

    * Added Time#floor method.  [Feature #15653]

  Modified method::

    * Time#inspect is separated from Time#to_s and it shows its sub second.
      [Feature #15958]

UnboundMethod::

  New methods::

    * Added UnboundMethod#bind_call method.  [Feature #15955]

`umethod.bind_call(obj, ...)` is semantically equivalent to
`umethod.bind(obj).call(...)`.  This idiom is used in some libraries to
call a method that is overridden.  The added method does the same
without allocation of intermediate Method object.

    class Foo
      def add_1(x)
        x + 1
      end
    end
    class Bar < Foo
      def add_1(x) # override
        x + 2
      end
    end

    obj = Bar.new
    p obj.add_1(1) #=> 3
    p Foo.instance_method(:add_1).bind(obj).call(1) #=> 2