@@ -174,6 +174,10 @@ Module::
 
     * Module#autoload? now takes an +inherit+ optional argument, like as
       Module#const_defined?.  [Feature #15777]
+    
+    * Module#name now always return a frozen String. The returned String is
+      always the same for a given Module. This change is experimental
+      [Feature #16150]
 
 ObjectSpace::WeakMap::
 
